edition = "2023";

package pb;
import "google/protobuf/go_features.proto";

option features.field_presence = IMPLICIT;
option go_package = "github.com/criyle/go-judge/pb";
option features.(pb.go).api_level = API_OPAQUE;

message FileID { string fileID = 1; }

message FileGetRequest {
  repeated string fileIDs = 1;
  uint64 truncateLength = 2;
}

message FileAddRequest {
  string name = 1;
  bytes content = 2;
}

message FileGetResponse {
  message FileContent {
    string fileId = 1;
    bytes content = 2;
  }
  repeated FileContent contents = 1;
}

message FileListResponse {
  map<string, string> fileIDs = 1;
}

message FileDeleteRequest {
  repeated string fileIDs = 1;
}
