edition = "2023";

package pb;

option features.field_presence = IMPLICIT;
option go_package = "github.com/criyle/go-judge/pb";
option features.(pb.go).api_level = API_OPAQUE;

import "google/protobuf/empty.proto";
import "request.proto";
import "response.proto";
import "stream_request.proto";
import "stream_response.proto";
import "file.proto";
import "minio.proto";
import "google/protobuf/go_features.proto";

service Executor {
  // Exec defines unary RPC to run a program with resource limitations
  rpc Exec(Request) returns (Response);

  // ExecStream defines streaming RPC to run a program with real-time input &
  // output. The first request must be execRequest and the following request
  // must be execInput. The last response must be execResponse and the others
  // are execOutput. TTY attribute will create single pty for the program thus
  // stdout & stderr should have same name
  rpc ExecStream(stream StreamRequest) returns (stream StreamResponse);

  // FileList lists all files available in the file store
  rpc FileList(google.protobuf.Empty) returns (FileListResponse);

  // FileAdd create a file into the file store
  rpc FileAdd(FileAddRequest) returns (FileID);

  // FileGet download files from the file store (supports batch retrieval)
  rpc FileGet(FileGetRequest) returns (FileGetResponse);

  // FileDelete deletes files from the file store (supports batch deletion)
  rpc FileDelete(FileDeleteRequest) returns (google.protobuf.Empty);

  // FileDownloadFromMinio download the file from minio and store it in file store. The download works in batch mode.
  // The presigned GET URLs are provided by the caller.
  rpc FileDownloadFromMinio(DownloadFromMinioRequest) returns (DownloadFromMinioResponse);

  // FileUploadToMinio upload the file from file store to minio
  // The presigned PUT URL is provided by the caller.
  rpc FileUploadToMinio(UploadToMinioRequest) returns (google.protobuf.Empty);
};
